<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:icon="@drawable/ic_more_vert_black_24dp"
    android:title="Options"
    app:showAsAction="always">
            <item
                android:id="@+id/menu_play"
                android:icon="@drawable/ic_play_circle_outline_black_24dp"
                android:orderInCategory="100"
                android:title="@string/menu_play"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_rename"
                android:icon="@drawable/ic_mode_edit_black_24dp"
                android:orderInCategory="100"
                android:title="@string/menu_rename"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_movefile"
                android:icon="@drawable/ic_folder_open_black_24dp"
                android:orderInCategory="100"
                android:title="@string/menu_movefile"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_share"
                android:icon="@drawable/ic_share_black_24dp"
                android:orderInCategory="100"
                android:title="@string/menu_share"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_delete"
                android:icon="@drawable/ic_delete_forever_black_24dp"
                android:orderInCategory="100"
                android:title="@string/menu_delete"
                app:showAsAction="never" />

</menu>